Add token authentication, update post recipe
