# api_schema/openapi-schema.json
@@ -62,47 +62,14 @@
       "get": {
         "operationId": "listRecipes",
         "description": "List all recipes, or create a new snippet.",
-        "parameters": [
-          {
-            "name": "page",
-            "required": false,
-            "in": "query",
-            "description": "A page number within the paginated result set.",
-            "schema": {
-              "type": "integer"
-            }
-          }
-        ],
+        "parameters": [],
         "responses": {
           "200": {
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "count": {
-                      "type": "integer",
-                      "example": 123
-                    },
-                    "next": {
-                      "type": "string",
-                      "nullable": true,
-                      "format": "uri",
-                      "example": "http://api.example.org/accounts/?page=4"
-                    },
-                    "previous": {
-                      "type": "string",
-                      "nullable": true,
-                      "format": "uri",
-                      "example": "http://api.example.org/accounts/?page=2"
-                    },
-                    "results": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/Recipe"
-                      }
-                    }
-                  }
+                  "type": "array",
+                  "items": {}
                 }
               }
             },
@@ -119,20 +86,14 @@
         "parameters": [],
         "requestBody": {
           "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Recipe"
-              }
-            },
             "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/Recipe"
-              }
+              "schema": {}
             },
             "multipart/form-data": {
-              "schema": {
-                "$ref": "#/components/schemas/Recipe"
-              }
+              "schema": {}
+            },
+            "application/json": {
+              "schema": {}
             }
           }
         },
@@ -140,9 +101,7 @@
           "201": {
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Recipe"
-                }
+                "schema": {}
               }
             },
             "description": ""
@@ -172,9 +131,7 @@
           "200": {
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Recipe"
-                }
+                "schema": {}
               }
             },
             "description": ""
@@ -200,20 +157,14 @@
         ],
         "requestBody": {
           "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Recipe"
-              }
-            },
             "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/Recipe"
-              }
+              "schema": {}
             },
             "multipart/form-data": {
-              "schema": {
-                "$ref": "#/components/schemas/Recipe"
-              }
+              "schema": {}
+            },
+            "application/json": {
+              "schema": {}
             }
           }
         },
@@ -221,9 +172,7 @@
           "201": {
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Recipe"
-                }
+                "schema": {}
               }
             },
             "description": ""
@@ -774,47 +723,14 @@
       "get": {
         "operationId": "listRecipes",
         "description": "List all recipes, or create a new snippet.",
-        "parameters": [
-          {
-            "name": "page",
-            "required": false,
-            "in": "query",
-            "description": "A page number within the paginated result set.",
-            "schema": {
-              "type": "integer"
-            }
-          }
-        ],
+        "parameters": [],
         "responses": {
           "200": {
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "count": {
-                      "type": "integer",
-                      "example": 123
-                    },
-                    "next": {
-                      "type": "string",
-                      "nullable": true,
-                      "format": "uri",
-                      "example": "http://api.example.org/accounts/?page=4"
-                    },
-                    "previous": {
-                      "type": "string",
-                      "nullable": true,
-                      "format": "uri",
-                      "example": "http://api.example.org/accounts/?page=2"
-                    },
-                    "results": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/Recipe"
-                      }
-                    }
-                  }
+                  "type": "array",
+                  "items": {}
                 }
               }
             },
@@ -831,20 +747,14 @@
         "parameters": [],
         "requestBody": {
           "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Recipe"
-              }
-            },
             "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/Recipe"
-              }
+              "schema": {}
             },
             "multipart/form-data": {
-              "schema": {
-                "$ref": "#/components/schemas/Recipe"
-              }
+              "schema": {}
+            },
+            "application/json": {
+              "schema": {}
             }
           }
         },
@@ -852,9 +762,7 @@
           "201": {
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Recipe"
-                }
+                "schema": {}
               }
             },
             "description": ""
@@ -884,9 +792,7 @@
           "200": {
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Recipe"
-                }
+                "schema": {}
               }
             },
             "description": ""
@@ -912,20 +818,14 @@
         ],
         "requestBody": {
           "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Recipe"
-              }
-            },
             "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/Recipe"
-              }
+              "schema": {}
             },
             "multipart/form-data": {
-              "schema": {
-                "$ref": "#/components/schemas/Recipe"
-              }
+              "schema": {}
+            },
+            "application/json": {
+              "schema": {}
             }
           }
         },
@@ -933,9 +833,7 @@
           "201": {
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Recipe"
-                }
+                "schema": {}
               }
             },
             "description": ""
@@ -1453,7 +1351,15 @@
           "instruction_set": {
             "type": "array",
             "items": {
-              "type": "string"
+              "type": "object",
+              "properties": {
+                "text": {
+                  "type": "string"
+                }
+              },
+              "required": [
+                "text"
+              ]
             }
           },
           "ingredient_set": {
@@ -1486,9 +1392,7 @@
           }
         },
         "required": [
-          "name",
-          "instruction_set",
-          "ingredient_set"
+          "name"
         ]
       },
       "User": {
